# research-extend-sig

./: Cargo.toml  Makefile  README.md  run_bench.py
cpsnarks-set/: Cargo.toml  README.md
cpsnarks-set-accumulator/: Cargo.toml  README.md
cpsnarks-set-accumulator/benches/accumulator/: add.rs  delete.rs
cpsnarks-set-accumulator/benches/group/: class.rs
cpsnarks-set-accumulator/src/: accumulator.rs  lib.rs
cpsnarks-set-accumulator/src/group/: class.rs  mod.rs  ristretto.rs
cpsnarks-set-accumulator/src/group/rsa/: mod.rs  rsa2048.rs  rsa3072.rs
cpsnarks-set/src/: transcript.rs
cpsnarks-set/src/commitments/: integer.rs  pedersen.rs
cpsnarks-set/src/protocols/: mod.rs
cpsnarks-set/src/protocols/membership_simple/: mod.rs  transcript.rs
cpsnarks-set/src/protocols/modeq/: mod.rs
cpsnarks-set/src/protocols/root/: mod.rs
cpsnarks-set/src/utils/: curve.rs
curve/: curve.sage  curve.sage.py
proptest-regressions/dlogmv/statement/: curve.txt
proptest-regressions/randomize/statement/: curve.txt
src/: bin.rs  lib.rs
src/dlogmv/: mod.rs
src/dlogmv/gadgets/: addition.rs  bits.rs  curve.rs  fixexp.rs  misc.rs  mod.rs  permissible.rs  window.rs
src/membership/: mod.rs
src/unknown/: base.rs  mod.rs
src/unknown/exppok/: mod.rs
src/unknown/extend/: mod.rs  reduce.rs  zkpokrep.rs
