[package]
edition = "2018"
name = "extend-sig"
version = "0.1.0"

[dependencies]
accumulator = {path = "./cpsnarks-set-accumulator"}
ark-bls12-381 = {git = "https://github.com/arkworks-rs/curves", default-features = false, features = ["curve"]}
bincode = "1.3.1"
bulletproofs = {git = "https://github.com/matteocam/bulletproofs", branch = "develop", features = ["yoloproofs"]}
cpsnarks-set = {path = "./cpsnarks-set", default-features = false, features = ["dalek"]}
curve25519-dalek = "3.0.0"
gridiron = "0.9"
hex = "0.4.2"
merlin = "2.0.0"
num-traits = "0.2.14"
proofsize_derive = "0.1.0"
rand = "0.7.3"
rand_core = {version = "0.5.1", features = ["getrandom"]}
rug = {version = "=1.7.0", features = ["serde", "integer"]}
rug-binserial = {git = "https://github.com/matteocam/rug-binserial"}
serde = {version = "1.0", features = ["derive"]}
sha2 = "0.9.3"

[dev-dependencies]
proptest = "0.10.1"

[lib]
name = "extend_sig"
path = "src/lib.rs"

[[bin]]
name = "bench"
path = "src/bin.rs"
