[package]
authors = [
  "Pablo Aldape <pablo.aldape@gmail.com>",
  "Lucas Ege <egelucas@gmail.com>",
  "Alan Flores-Lopez <alanf94@gmail.com>",
  "Sanjay Kannan <whaatt@gmail.com>",
  "Michael Straka <mstraka100@gmail.com>",
  "Eddie Wang <eddiew@cs.stanford.edu>",
]
description = "Cryptographic accumulators in Rust."
edition = "2018"
keywords = ["cryptography", "crypto", "accumulator", "rsa", "vector", "commitment"]
name = "accumulator"
readme = "README.md"
repository = "https://github.com/cambrian/accumulator"
version = "0.4.0"

[dependencies]
arrayref = "0.3.5"
blake2-rfc = "0.2.18"
curve25519-dalek = "1.1.3"
gmp-mpfr-sys = "=1.2.2"
lazy_static = "1.3.0"
rug = {version = "=1.7.0", features = ["serde", "integer"]}
serde = {version = "1.0.118", features = ["derive"]}
rug-binserial = "0.1.3"

[dev-dependencies]
criterion = "0.2.11"
rand = "0.6.5"

[[bench]]
harness = false
name = "comparison"
path = "benches/group/rsa.rs"

[[bench]]
harness = false
name = "class"
path = "benches/group/class.rs"

[[bench]]
harness = false
name = "add"
path = "benches/accumulator/add.rs"

[[bench]]
harness = false
name = "delete"
path = "benches/accumulator/delete.rs"

[[bench]]
harness = false
name = "hashes"
path = "benches/hash/hashes.rs"

[[bench]]
harness = false
name = "primality"
path = "benches/hash/primality.rs"

[[bench]]
harness = false
name = "poe"
path = "benches/proof/poe.rs"

[[bench]]
harness = false
name = "pokcr"
path = "benches/proof/pokcr.rs"

[[bench]]
harness = false
name = "poke2"
path = "benches/proof/poke2.rs"

[[bench]]
harness = false
name = "uint"
path = "benches/uint.rs"

[profile.bench]
debug = true
opt-level = 3

# Flamegraph debug symbols.
[profile.release]
debug = true
